Completed base Calendar API.
